// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`re-direct matches the last accepted Snapshot 1`] = `
<Relay(DefaultLayout)
  session={null}
>
  <Row
    noGutters={false}
  >
    <Col
      md={6}
    >
      <h3
        className="blue"
      >
        You need to be logged in to access this page.
      </h3>
      <p>
        Please log in to access this page.
        <br />
        You will be redirected to the requested page after doing so.
      </p>
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;

exports[`re-direct session idled matches the last accepted Snapshot 1`] = `
<Relay(DefaultLayout)
  session={null}
>
  <Row
    noGutters={false}
  >
    <Col
      md={6}
    >
      <h3
        className="blue"
      >
        You were logged out due to inactivity.
      </h3>
      <p>
        Please log in to access this page.
        <br />
        You will be redirected to the requested page after doing so.
      </p>
    </Col>
  </Row>
</Relay(DefaultLayout)>
`;
